--- a/plonetheme/barceloneta/theme/less/controlpanels.plone.less
+++ b/plonetheme/barceloneta/theme/less/controlpanels.plone.less
@@ -62,3 +62,8 @@
     input.quickSearch { margin-bottom: 0.5em; }
     .listingCheckbox { vertical-align: middle; text-align: center; }
  }
+
+.template-usergroup-groupprefs,
+.template-usergroup-userprefs {
+    form { overflow: scroll; }
+}
